# iata_recommendation

./: README.md  pyproject.toml
artifacts/: raw_chunks.pkl
notebooks/: 01_topic_evolution.ipynb  02_iata_chatbot.ipynb  sandbox.ipynb
src/: utils.py
