[tool.poetry]
name = "iata-recommendation"
version = "0.1.0"
description = ""
authors = ["kruu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.2.5"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
openai = "^1.75.0"
transformers = "^4.51.3"
sentence-transformers = "^4.1.0"
faiss-cpu = "^1.10.0"
pdfplumber = "^0.11.6"
nltk = "^3.9.1"
bertopic = "^0.17.0"
prophet = "^1.1.6"
streamlit = "^1.44.1"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
